--- a/.github/workflows/distributee.yml
+++ b/.github/workflows/distributee.yml
@@ -23,10 +23,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install bundle
-      run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+    #- name: Install bundle
+     # run: |
+      #    bundle config path vendor/bundle
+       #   bundle install --jobs 4 --retry 3
     - name: Create Firebase Service Credentials file
       run: |
           echo "$FIREBASE_CREDENTIALS" > firebase_credentials.json.b64
