--- a/.github/workflows/distributee.yml
+++ b/.github/workflows/distributee.yml
@@ -34,7 +34,8 @@ jobs:
       env:
           FIREBASE_CREDENTIALS: ${{ secrets.DIGITALCHURCH_FIREBASE_CREDENTIALS }}
     - name: Distribute app with 🔥 App Distribution 🚀
-      run: bundle exec fastlane distribute
+      run:
+      bundle: exec fastlane distribute
       env:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
 
