--- a/.github/workflows/distributee.yml
+++ b/.github/workflows/distributee.yml
@@ -35,7 +35,7 @@ jobs:
           FIREBASE_CREDENTIALS: ${{ secrets.DIGITALCHURCH_FIREBASE_CREDENTIALS }}
     - name: Distribute app with 🔥 App Distribution 🚀
       run:
-          bundler exec fastlane distribute
+           exec fastlane distribute
       env:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
 
