--- a/.github/workflows/distributee.yml
+++ b/.github/workflows/distributee.yml
@@ -35,6 +35,9 @@ jobs:
           FIREBASE_CREDENTIALS: ${{ secrets.DIGITALCHURCH_FIREBASE_CREDENTIALS }}
     - name: Install bundler
       run: sudo gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
+    - name: Install missing bundles
+      run: sudo bundle install --deployment
+
     - name: Distribute app with 🔥 App Distribution 🚀
       run:
            sudo bundle exec fastlane distribute
