--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_homeicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_homeicon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalChurchApp">
-        <activity android:name=".MainActivity">
+        <activity android:name=".OnboardingActivity"></activity>
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppThemeS">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
