--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_homeicon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DigitalChurchApp">
-        <activity android:name=".OnboardingActivity"></activity>
-        <activity android:name=".MainActivity"
+        android:theme="@style/AppThemeW">
+        <activity android:name=".views.login.LoginActivity"></activity>
+        <activity android:name=".views.signup.SignupActivity" />
+        <activity android:name=".views.OnboardingActivity" />
+        <activity
+            android:name=".views.MainActivity"
             android:theme="@style/AppThemeS">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
